syntax = "proto3";

package cart;

message Item {
  string id = 1;
  int32 quantity = 2;
  int64 addedAt = 3;
}

message GetCartRequest {
  string cartId = 1;
}

message GetCartResponse {
  repeated Item items = 1;
}

message ClearCartRequest{
  string cartId = 1;
}

message ClearCartResponse{
  string cartId = 1;
}

message IncreaseItemQuantityRequest {
  string cartId = 1;
  string itemId = 2;
}

message IncreaseItemQuantityResponse {
  Item item = 1;
}

message DecreaseItemQuantityRequest{
  string cartId = 1;
  string itemId = 2;
}

message DecreaseItemQuantityResponse{
  optional Item item = 1;
}

service CartService{
  rpc getCart(GetCartRequest) returns (GetCartResponse);
  rpc clearCart(ClearCartRequest) returns (ClearCartResponse);
  rpc increaseItemQuantity(IncreaseItemQuantityRequest) returns (IncreaseItemQuantityResponse);
  rpc decreaseItemQuantity(DecreaseItemQuantityRequest) returns (DecreaseItemQuantityResponse);
}